使用 Colaboratory 建立

--- a/1122.ipynb
+++ b/1122.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOZupduM0MEbp1oCaQaRa0U",
+      "authorship_tag": "ABX9TyOviTMhOBRokmYNqKIz7OdM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -600,9 +600,55 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Whwm8sFv4oRX",
-        "outputId": "7958d716-90e4-436b-bd36-eb33c172b815"
+        "outputId": "c769719f-1a1e-4198-abef-2b1547c99dbc"
       },
-      "execution_count": 46,
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'int'>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(type(F))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6eLbLyqX5vZp",
+        "outputId": "df286b0f-fe90-4630-9484-49a14ffd40f6"
+      },
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'int'>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(type(G))"
+      ],
+      "metadata": {
+        "id": "LlsDgK-x5y8q",
+        "outputId": "78824d8a-611d-4e20-9342-6d4185b312f3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "stream",
